# axum-template

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  cargo-generate.toml  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/: app.rs  config.rs  error.rs  main.rs  state.rs
src/dto/: ops.rs
src/handlers/: ops.rs
src/routes/: mod.rs  openapi.rs  ops.rs
