[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }

tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util", "sensitive-headers"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

thiserror = "2.0.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
